--- a/.github/workflows/update-syntaxflow-meta.yml
+++ b/.github/workflows/update-syntaxflow-meta.yml
@@ -1,6 +1,16 @@
 name: Update Syntaxflow meta
 
 on:
+  workflow_call:
+    inputs:
+      update_version:
+        description: "Version to update (e.g. 1.3.0-beta1)"
+        required: true
+        type: string
+      update_last:
+        description: "Update last syntaxflow meta or not"
+        required: false
+        type: boolean
   workflow_dispatch:
     inputs:
       update_version:
@@ -30,7 +40,7 @@ jobs:
 
       - name: Get Repo tags
         run: |
-          VERSION_INPUT="${{ github.event.inputs.update_version}}"
+          VERSION_INPUT="${{ inputs.update_version}}"
           if [ -z "$VERSION_INPUT" ]; then
             VERSION_INPUT="dev"
           fi 
@@ -91,7 +101,7 @@ jobs:
            echo "::warning::Failed to upload versioned meta info"
           fi
           
-          if [ ${{ github.event.inputs.update_last }} == true ]; then
+          if [ ${{ inputs.update_last }} == true ]; then
               echo "Uploading to latest OSS path..."
               ./yak_linux_amd64 upload-oss \
                -f "syntaxflow-meta.json:/yak/latest/syntaxflow-meta.json" \
