--- a/.github/workflows/update-syntaxflow-meta.yml
+++ b/.github/workflows/update-syntaxflow-meta.yml
@@ -35,14 +35,15 @@ jobs:
 
       - name: Get Yak binary Latest
         run: |
-          wget https://aliyun-oss.yaklang.com/yak/latest/yak_linux_amd64
+          wget https://aliyun-oss.yaklang.com/yak/1.3.9-beta3/yak_linux_amd64
           pwd && ls -lh && chmod +x ./yak_linux_amd64
+          ./yak_linux_amd64 version
 
       - name: Get Repo tags
         run: |
           VERSION_INPUT="${{ inputs.update_version}}"
           if [ -z "$VERSION_INPUT" ]; then
-            VERSION_INPUT="dev"
+            VERSION_INPUT="1.3.9-beta3"
           fi 
           echo "YAK_TAG=$VERSION_INPUT" >> $GITHUB_ENV 
 
