--- a/.github/workflows/reuse-build-sfweb.yml
+++ b/.github/workflows/reuse-build-sfweb.yml
@@ -14,18 +14,26 @@ on:
           - darwin-arm64
           - linux-amd64
           - linux-arm64
+      update:
+        description: "Update to remote service"
+        type: boolean 
+        required: false 
   workflow_call:
     inputs:
       os:
         description: "System to build"
         required: true
         type: string
+      update:
+        description: "Update to remote service"
+        type: boolean 
+        required: false 
 
 jobs:
   build_and_upload_asset:
     runs-on: ${{ contains(inputs.os, 'windows') && 'windows-latest' || 'macos-14' }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -82,6 +90,39 @@ jobs:
           go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)'" -o $OUTPUT_NAME -v common/sfwebrunner/main.go && ls
 
           echo "OUTPUT_NAME=$OUTPUT_NAME" >> $GITHUB_ENV
+
+      - name: Setup SSH
+        if:  inputs.update == true 
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SFWEB_SSH_PRIVATE }}" | tr -d '\r' > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SFWEB_SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Atomic deployment
+        if:  inputs.update == true 
+        run: |
+          scp -C -o StrictHostKeyChecking=no \
+              ./sfweb_linux_amd64 \
+              root@${{ secrets.SFWEB_SSH_HOST }}:/tmp/sfweb_${{ github.sha }}
+          ssh -o StrictHostKeyChecking=no root@${{ secrets.SFWEB_SSH_HOST }} << 'EOF'
+          set -e
+
+          # 创建备份
+          sudo cp /root/sfweb_linux_amd64 /root/backup/sfweb_$(date +%Y%m%d-%H%M).bak
+
+          # 停止服务并替换文件
+          sudo systemctl stop sfweb.service
+          sudo mv /tmp/sfweb_${{ github.sha }} /root/sfweb_linux_amd64
+          sudo chown root:root /root/sfweb_linux_amd64
+          sudo chmod 755 /root/sfweb_linux_amd64
+
+          # 启动服务并验证
+          sudo systemctl start sfweb.service
+          sleep 5  # 等待服务初始化
+          sudo systemctl status sfweb.service --no-pager
+
+          EOF
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
