feature(ssacli): add ssa-risk cmd

--- a/.github/workflows/diff-code-check.yml
+++ b/.github/workflows/diff-code-check.yml
@@ -87,8 +87,10 @@ jobs:
           ./yak gitefs --start $MERGE_BASE --end ${{ env.HEAD_SHA }} --output ./fs.zip
           ./yak ssa -t ./fs.zip --program diffcode -l golang > log.txt 2>&1 || exit 1; 
           grep -F "Current goroutine call stack:" log.txt && exit 1;
-          ./yak sf --program diffcode ./common/ssa_bootstrapping/ci_rule --output risk.json || exit 1;
-          ./yak sf --program diffcode ./common/syntaxflow/sfbuildin/buildin/golang --output risk.json || exit 1;
+          ./yak sf --program diffcode ./common/ssa_bootstrapping/ci_rule --save;
+          ./yak sf --program diffcode ./common/syntaxflow/sfbuildin/buildin/golang --save;
+          ./yak ssa-risk --program diffcode --json --output risk.json 
+          ./scripts/ssa-risk-format.sh 
         # ./yak check --language go --file ./fs.zip --rules ./common/ssa_bootstrapping/ci_rule --exclude-file *.pb.go > log.txt 2>&1 || exit 1
           
       - name: Upload fail log
@@ -115,4 +117,5 @@ jobs:
       - name: Workflows Fail
         if: failure()
         run: |
-          jq . risk.json
+          cat risk.json
+          exit 1
