ci(workflows): add jwt tests to essential workflow

--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -236,6 +236,8 @@ jobs:
               go test --timeout 1m ./common/mcp/convert
               # doc
               go test --timeout 1m  ./common/yak/yakdoc/...
+              # jwt
+              go test --timeout 1m ./common/authhack/...
           - name: Test BinParser
             run: |
               # binary parser
