--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -45,8 +45,8 @@ jobs:
 
       - name: Init Module
         run: |
-          echo "remove go/pkg/mod/google.golang.org/genproto"
-          rm -rf ~/go/pkg/mod/google.golang.org/genproto
+          echo "remove go/pkg/mod/google.golang.org"
+          rm -rf ~/go/pkg/mod/google.golang.org
           go mod tidy && go work vendor
 
       - name: Init Project
