--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -188,8 +188,11 @@ jobs:
           - name: Test gRPC(LARGE)MUSTPASS
             run: go test -timeout 2m -run TestLARGEGRPCMUSTPASS* ./common/yakgrpc/...
 
+          - name: Test AI Task
+            run: go test -timeout 1m -run TestAITaskWith ./common/yakgrpc/...
+
           - name: Test gRPC Other
-            run: go test -v -timeout 6m -skip "^(TestGRPCMUSTPASS_HTTP_*|TestGRPCMUSTPASS_MITM_*|TestGRPCMUSTPASS_HTTPFuzzer*|TestGRPCMUSTPASS_LANGUAGE*|TestGRPCMUSTPASS_COMMON*|TestLARGEGRPCMUSTPASS*|TestGRPCMUSTPASS_SyntaxFlow*)" ./common/yakgrpc/...
+            run: go test -v -timeout 6m -skip "^(TestGRPCMUSTPASS_HTTP_*|TestAITaskWith*|TestGRPCMUSTPASS_MITM_*|TestGRPCMUSTPASS_HTTPFuzzer*|TestGRPCMUSTPASS_LANGUAGE*|TestGRPCMUSTPASS_COMMON*|TestLARGEGRPCMUSTPASS*|TestGRPCMUSTPASS_SyntaxFlow*)" ./common/yakgrpc/...
 
           - name: Test Vulinbox SQL Injection
             run: go test -timeout 5m -run TestGRPCMUSTPASS_SQL ./common/coreplugin
