--- a/.github/workflows/new-yak-engine-test.yml
+++ b/.github/workflows/new-yak-engine-test.yml
@@ -10,7 +10,7 @@ jobs:
 
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Cache YakLang Project
@@ -33,12 +33,6 @@ jobs:
       with:
         go-version-file: "./go.mod"
       id: go
-
-    - name: Dependence
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-          packages: libpcap-dev
-          version: 1.9.1-3
 
     - name: Init Module
       run: |
