--- a/.github/workflows/update-embed-fs.yml
+++ b/.github/workflows/update-embed-fs.yml
@@ -8,7 +8,7 @@ on:
       - 'common/syntaxflow/sfbuildin/buildin/**'
 jobs:
   generate-commit:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
