--- a/.github/workflows/update-syntaxflow-meta.yml
+++ b/.github/workflows/update-syntaxflow-meta.yml
@@ -28,7 +28,7 @@ on:
       - ".github/workflows/update-syntaxflow-meta.yml"
 jobs:
   update-syntaxflow-meta:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
